Feature/022 2023110900 (#46)
* order class명 변경 & 주문 등록 로직 전체 초기화 (수정 전)

* 주문 하나에 주문상품, 배송정보, 판매자 정보를 넣을 수 있게 변경

* 임시 주문 불러오기 api & 문서

* seller 신청시 회사명 중복검사 추가