@@ -2,24 +2,22 @@ package ai.serverapi.order.service;
 
 import ai.serverapi.global.util.MemberUtil;
 import ai.serverapi.member.domain.Member;
-import ai.serverapi.order.domain.Orders;
-import ai.serverapi.order.domain.OrdersDetail;
+import ai.serverapi.order.domain.Order;
+import ai.serverapi.order.domain.OrderItem;
 import ai.serverapi.order.dto.request.TempOrderDto;
 import ai.serverapi.order.dto.request.TempOrderRequest;
-import ai.serverapi.order.dto.response.ReceiptResponse;
+import ai.serverapi.order.dto.response.PostTempOrderResponse;
 import ai.serverapi.order.dto.response.TempOrderResponse;
-import ai.serverapi.order.dto.response.TempOrderVo;
-import ai.serverapi.order.repository.OrdersDetailRepostiory;
-import ai.serverapi.order.repository.OrdersRepository;
+import ai.serverapi.order.enums.OrderStatus;
+import ai.serverapi.order.repository.OrderItemRepository;
+import ai.serverapi.order.repository.OrderRepository;
 import ai.serverapi.product.domain.Product;
 import ai.serverapi.product.enums.Status;
 import ai.serverapi.product.repository.ProductRepository;
 import jakarta.servlet.http.HttpServletRequest;
-import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.stereotype.Service;
@@ -33,66 +31,84 @@ public class OrderService {
 
     private final MemberUtil memberUtil;
     private final ProductRepository productRepository;
-    private final OrdersRepository ordersRepository;
-    private final OrdersDetailRepostiory ordersDetailRepository;
+    private final OrderRepository orderRepository;
+    private final OrderItemRepository ordersDetailRepository;
+    private final OrderItemRepository orderItemRepository;
 
     @Transactional
-    public TempOrderResponse postTempOrder(
+    public PostTempOrderResponse postTempOrder(
         TempOrderRequest tempOrderRequest,
         HttpServletRequest request
     ) {
         Member member = memberUtil.getMember(request);
 
-        List<TempOrderDto> requestOrderList = tempOrderRequest.getOrderList();
-        Map<Long, Integer> productEaMap = new HashMap<>();
+        /**
+         * 1. 주문 발급
+         * 2. 주문 상품 등록
+         * 3. 판매자 리스트 등록
+         */
 
-        for (TempOrderDto t : requestOrderList) {
-            productEaMap.put(t.getProductId(), t.getEa());
-        }
+        // 주문 발급
+        StringBuffer sb = new StringBuffer();
+        List<TempOrderDto> requestOrderProductList = tempOrderRequest.getOrderList();
+        List<Long> requestProductIdList = requestOrderProductList.stream().mapToLong(
+                                                                     TempOrderDto::getProductId)
+                                                                 .boxed().toList();
 
-        List<Long> orderProductIdList = requestOrderList.stream()
-                                                        .map(o -> o.getProductId())
-                                                        .collect(Collectors.toList());
+        List<Product> productList = productRepository.findAllById(requestProductIdList);
+        productList = productList.stream().sorted((p1, p2) -> p2.getPrice() - p1.getPrice())
+                                 .toList();
 
-        List<Product> productList = productRepository.findAllById(orderProductIdList);
-
-        if (requestOrderList.size() != productList.size()) {
-            throw new IllegalArgumentException("유효하지 않은 상품 id가 존재합니다.");
-        }
-
-        List<Product> notNormalProductList = productList.stream()
-                                                        .filter(p -> !p.getStatus()
-                                                                       .equals(Status.NORMAL))
-                                                        .toList();
-
-        if (!notNormalProductList.isEmpty()) {
-            for (Product p : notNormalProductList) {
-                log.error("[order] [tempOrder] [유효하지 않은 상품 주문 시도] member = {}, id = {}, name = {}",
-                    member.getId(), p.getId(), p.getMainTitle());
-            }
+        if ((requestOrderProductList.size() != productList.size()) || productList.isEmpty()) {
             throw new IllegalArgumentException("유효하지 않은 상품이 존재합니다.");
         }
 
-        List<ReceiptResponse> receiptList = new ArrayList<>();
-        List<TempOrderVo> orderList = new ArrayList<>();
-        int totalPrice = 0;
+        sb.append(productList.get(0).getMainTitle());
+        if (productList.size() > 1) {
+            sb.append(" 외 ");
+            sb.append(productList.size() - 1);
+            sb.append("개");
+        }
+        Order saveOrder = orderRepository.save(Order.of(member, sb.toString()));
 
-        Orders orders = Orders.of(member);
-        Orders saveOrder = ordersRepository.save(orders);
-
-        for (Product p : productList) {
-            int ea = productEaMap.get(p.getId());
-
-            OrdersDetail ordersDetail = OrdersDetail.of(orders, p, ea);
-            ordersDetailRepository.save(ordersDetail);
-
-            totalPrice += ordersDetail.getProductTotalPrice();
-
-            receiptList.add(ReceiptResponse.of(ordersDetail));
-
-            orderList.add(TempOrderVo.of(ordersDetail));
+        // 주문 상품 등록
+        Map<Long, Integer> eaMap = new HashMap<>();
+        for (TempOrderDto o : requestOrderProductList) {
+            eaMap.put(o.getProductId(), o.getEa());
         }
 
-        return new TempOrderResponse(saveOrder.getId(), totalPrice, receiptList, orderList);
+        for (Product p : productList) {
+            if (p.getStatus() != Status.NORMAL) {
+                throw new IllegalArgumentException("상품 상태가 유효하지 않습니다.");
+            }
+
+            int ea = eaMap.get(p.getId());
+            OrderItem orderItem = orderItemRepository.save(OrderItem.of(saveOrder, p, ea));
+            saveOrder.getOrderItemList().add(orderItem);
+
+        }
+
+        return new PostTempOrderResponse(saveOrder.getId());
+    }
+
+    public TempOrderResponse getTempOrder(Long orderId, HttpServletRequest request) {
+        /**
+         * order id 와 member 정보로 임시 정보를 불러옴
+         */
+        Member member = memberUtil.getMember(request);
+        Order order = orderRepository.findById(orderId).orElseThrow(
+            () -> new IllegalArgumentException("유효하지 않은 주문 번호입니다."));
+
+        if (member.getId() != order.getMember().getId()) {
+            log.info("[getOrder] 유저가 주문한 번호가 아님! 요청한 user_id = {}, order_id = {}", member.getId(),
+                order.getId());
+            throw new IllegalArgumentException("유효하지 않은 주문입니다.");
+        }
+
+        if (order.getStatus() != OrderStatus.TEMP) {
+            throw new IllegalArgumentException("유효하지 않은 주문입니다.");
+        }
+
+        return TempOrderResponse.of(order);
     }
 }
